--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev docs",
@@ -13,6 +14,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "@css-render/vue3-ssr": "^0.15.14",
+    "@types/node": "^22.15.23",
+    "@vicons/material": "^0.13.0",
+    "busuanzi.pure.js": "^1.0.3",
+    "dayjs": "^1.11.13",
+    "fs": "^0.0.1-security",
+    "naive-ui": "^2.41.0",
+    "sass": "^1.89.0",
+    "vite": "^6.3.5",
+    "vitepress": "^1.6.3",
+    "vitepress-sidebar": "^1.31.1",
+    "vue": "^3.5.15"
+  },
+  "dependencies": {
+    "pagefind": "^1.3.0",
+    "vitepress-plugin-image-viewer": "^1.1.6",
+    "vitepress-plugin-pagefind": "^0.4.13"
   }
 }
